# street-level-change

./: .gitignore  Makefile  NOTES1.md  PR_DESCRIPTION.md  README.md  pyproject.toml  run.py
STEGO/src/: segment_street_view.py  train_segmentation.py
STEGO/street_view_images/: street_view_fetcher.py
notebooks/: clustering_analysis.ipynb  clustering_analysis.py  streetview_image_downloader.ipynb  usecase_renabap.ipynb  view_angles.ipynb
scripts/: panos.py  plots.py  run_demo.py  run_pipeline.py  run_regions.py  test_fetcher.py  test_point_unification.py  test_stego.py  unify.py
src/: __init__.py  osm_streets.py  sv.py  utils.py
src/api/: __init__.py  streetview.py  streetview_fetcher.py
src/core/: __init__.py  geo_utils.py  heading_fov.py  panorama.py  point_unification.py
src/data_handlers/: __init__.py  exporters.py  loaders.py  storage.py
src/ml/: __init__.py  evaluation.py  feature_extraction.py  models.py  segment_street_view.py
src/ml/stego/: .gitignore  STEGO_Colab_Demo.ipynb  __init__.py  environment_test.yml  requirements.txt
src/ml/stego/src/: crf.py  crop_datasets.py  demo_segmentation.py  download_datasets.py  eval_segmentation.py  modules.py  plot_dino_correspondence.py  train_crf.py  train_segmentation.py  utils.py
src/pipeline/: __init__.py  components.py  workflows.py
src/plotting/: __init__.py  static_plotting.py
src/point_unification/: __init__.py  point_unification.py
src/processing/: __init__.py  image_processing.py  point_unification.py
src/visualization/: __init__.py  interactive_plotting.py  static_plotting.py
street_view_images/: street_view_fetcher.py
