[project]
name = "street-level-change"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streetview (>=0.0.11,<0.0.12)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
