[project]
name = "street-level-change"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerónimo Luza",email = "jero.luza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streetview (>=0.0.11,<0.0.12)",
    "pyproj (>=3.7.1,<4.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
